diy-datacloud/main/default/objects/ssot__Individual__dlm/fields/AnnualIncome__c.field-meta.xml
<CustomField>
    <fullName>AnnualIncome__c</fullName>
    <label>AnnualIncome</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>AnnualIncome</labelOverride>
        <masterLabel>AnnualIncome</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>