diy-datacloud/main/default/objects/ssot__Individual__dlm/fields/AverageSpends__c.field-meta.xml
<CustomField>
    <fullName>AverageSpends__c</fullName>
    <label>AverageSpends</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>AverageSpends</labelOverride>
        <masterLabel>AverageSpends</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>