diy-datacloud/main/default/objects/ssot__Individual__dlm/fields/BrandAffinity__c.field-meta.xml
<CustomField>
    <fullName>BrandAffinity__c</fullName>
    <label>BrandAffinity</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>BrandAffinity</labelOverride>
        <masterLabel>BrandAffinity</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>