diy-datacloud/main/default/objects/ssot__Individual__dlm/fields/cdp_sys_record_currency__c.field-meta.xml
<CustomField>
    <fullName>cdp_sys_record_currency__c</fullName>
    <label>cdp_sys_record_currency</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>cdp_sys_record_currency</labelOverride>
        <masterLabel>cdp_sys_record_currency</masterLabel>
        <refAttrDeveloperName>cdp_sys_record_currency</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>