diy-datacloud/main/default/objects/ssot__Individual__dlm/fields/FamilySizes__c.field-meta.xml
<CustomField>
    <fullName>FamilySizes__c</fullName>
    <label>FamilySizes</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>FamilySizes</labelOverride>
        <masterLabel>FamilySizes</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>