diy-datacloud/main/default/objects/ssot__Individual__dlm/fields/GarageSize__c.field-meta.xml
<CustomField>
    <fullName>GarageSize__c</fullName>
    <label>GarageSize</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>GarageSize</labelOverride>
        <masterLabel>GarageSize</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>