diy-datacloud/main/default/objects/ssot__Individual__dlm/fields/IncomeLevel__c.field-meta.xml
<CustomField>
    <fullName>IncomeLevel__c</fullName>
    <label>IncomeLevel</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>IncomeLevel</labelOverride>
        <masterLabel>IncomeLevel</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>