diy-datacloud/main/default/objects/ssot__Individual__dlm/fields/IsSingleFamilyHome__c.field-meta.xml
<CustomField>
    <fullName>IsSingleFamilyHome__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsSingleFamilyHome</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>IsSingleFamilyHome</labelOverride>
        <masterLabel>IsSingleFamilyHome</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>