diy-datacloud/main/default/objects/ssot__Individual__dlm/fields/IsWorkshopSpacePresent__c.field-meta.xml
<CustomField>
    <fullName>IsWorkshopSpacePresent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsWorkshopSpacePresent</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>IsWorkshopSpacePresent</labelOverride>
        <masterLabel>IsWorkshopSpacePresent</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>