diy-datacloud/main/default/objects/ssot__Individual__dlm/fields/LifetimeValues__c.field-meta.xml
<CustomField>
    <fullName>LifetimeValues__c</fullName>
    <label>LifetimeValues</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>LifetimeValues</labelOverride>
        <masterLabel>LifetimeValues</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>