diy-datacloud/main/default/objects/ssot__Individual__dlm/fields/OwnershipStatus__c.field-meta.xml
<CustomField>
    <fullName>OwnershipStatus__c</fullName>
    <label>OwnershipStatus</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>OwnershipStatus</labelOverride>
        <masterLabel>OwnershipStatus</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>