diy-datacloud/main/default/objects/ssot__Individual__dlm/fields/ProjectFrequency__c.field-meta.xml
<CustomField>
    <fullName>ProjectFrequency__c</fullName>
    <label>ProjectFrequency</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>ProjectFrequency</labelOverride>
        <masterLabel>ProjectFrequency</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>