diy-datacloud/main/default/objects/ssot__Individual__dlm/fields/PurchaseFrequency__c.field-meta.xml
<CustomField>
    <fullName>PurchaseFrequency__c</fullName>
    <label>PurchaseFrequency</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>PurchaseFrequency</labelOverride>
        <masterLabel>PurchaseFrequency</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>