diy-datacloud/main/default/objects/ssot__Individual__dlm/fields/ResidenceType__c.field-meta.xml
<CustomField>
    <fullName>ResidenceType__c</fullName>
    <label>ResidenceType</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>ResidenceType</labelOverride>
        <masterLabel>ResidenceType</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>