diy-datacloud/main/default/objects/ssot__Individual__dlm/fields/Seasonality__c.field-meta.xml
<CustomField>
    <fullName>Seasonality__c</fullName>
    <label>Seasonality</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Seasonality</labelOverride>
        <masterLabel>Seasonality</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>