diy-datacloud/main/default/objects/ssot__Individual__dlm/fields/Service_Preference__c.field-meta.xml
<CustomField>
    <fullName>Service_Preference__c</fullName>
    <label>Service_Preference</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Service_Preference</labelOverride>
        <masterLabel>Service_Preference</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>