diy-datacloud/main/default/objects/ssot__Individual__dlm/fields/SkillLevel__c.field-meta.xml
<CustomField>
    <fullName>SkillLevel__c</fullName>
    <label>SkillLevel</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>SkillLevel</labelOverride>
        <masterLabel>SkillLevel</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>