diy-datacloud/main/default/objects/ssot__Individual__dlm/fields/StorePreference__c.field-meta.xml
<CustomField>
    <fullName>StorePreference__c</fullName>
    <label>StorePreference</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>StorePreference</labelOverride>
        <masterLabel>StorePreference</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>